--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<div class="card-body">
 								<ul class="text-left" style="list-style: none;">
 									<li><a href="">HTML</a></li>
-									<li><a href="">Bootstras</a></li>
+									<li><a href="">Bootstrap</a></li>
 									<li><a href="">Node JS Server</a></li>
 								</ul>
 							</div>
